2010-01-11  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #13092: Massuploader button is too small (Thanks to Steffen Gebert)

2010-01-10  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #12631: Flash Message to the history / changelog (Thanks to Georg Ringer)

2010-01-10  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #12977: treeLevel in TSconfig conditions should consider the creation of new pages

2010-01-09  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #13191: Scheduler fails with fatal error if using intervals in cron command
	* Fixed bug #12928: SQL error in translationCount() if table does not provide deleted field (Thanks to Georg Ringer)
	* Fixed bug #12507: (Un)Install icon points to wrong extension in Opera (Thanks to Steffen Gebert)

2010-01-08  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13098: DB list: layout looks weird with thumbnails (Thanks to Steffen Gebert)
	* Fixed bug #13097: File list: Alternating row colors are weird with thumbnails (Thanks to Steffen Gebert)

2010-01-08  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12779: Previously selected type of backend login is now stored in a cookie (Thanks to Sebastian Gebhard)

2010-01-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Updated htmlArea RTE version to 1.8.7

2010-01-05  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12341: Image generation broken with PHPs safe_mode activated and GraphicsMagick (Thanks to Marcus Krause, Helmut Hummel and Bernhard Kraft)

2010-01-04  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13096: Unable to disable thumbnails with thumbnailsByDefault (Thanks to Steffen Gebert)
	* Fixed bug #13118: Toggle empty tree produces JS error (Thanks to Felix Oertel)
	* Fixed bug #12946: t3lib_div::readLLfile use debug output

2010-01-04  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12506: JSMENU does not respect mount point overlays (Thanks to Joerg Wagner)

2010-01-03  Benjamin Mack  <benni@typo3.org>
