@@ -3049,12 +3049,7 @@ class t3lib_TCEforms	{
 		if ($TCA[$table]['ctrl']['type'])	{
 			$typeFieldName = $TCA[$table]['ctrl']['type'];
 			$typeFieldConfig = $TCA[$table]['columns'][$typeFieldName];
-			if (isset($typeFieldConfig['l10n_mode']) && $typeFieldConfig['l10n_mode'] == 'exclude') {
-					// retrieve the typeNum from the original records's type field
-				$typeNum = $this->defaultLanguageData[$table . ':' . $row['uid']][$typeFieldName];
-			} else {
-				$typeNum = $row[$typeFieldName];	// Get value of the row from the record which contains the type value.
-			}
+			$typeNum = $this->getLanguageOverlayRawValue($table, $row, $typeFieldName, $typeFieldConfig);
 			if (!strcmp($typeNum,''))	$typeNum=0;			// If that value is an empty string, set it to "0" (zero)
 		} else {
 			$typeNum = 0;	// If no "type" field, then set to "0" (zero)
