@@ -1,3 +1,7 @@
+2010-01-13  Steffen Kamper  <info@sk-typo3.de>
+
+	* Follow-up to #12781: Bug: tceforms type do not work if the type field has l10n_mode == exclude (thanks to Fabrizio Branca)
+
 2010-01-11  Benjamin Mack  <benni@typo3.org>
 
 	* Fixed bug #13092: Massuploader button is too small (Thanks to Steffen Gebert)
